--- a/scss/main.css
+++ b/scss/main.css
@@ -1855,7 +1855,7 @@ iframe {
   cursor: pointer;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
   position: relative;
 }
 
@@ -1869,10 +1869,11 @@ iframe {
 .card-chasseur p {
   position: absolute;
   top: 50px;
-  text-align: center;
-  color: white;
+  text-align: start;
+  color: #beafaf;
   font-size: 1.1rem;
   opacity: 0;
+  padding: 10px;
   -webkit-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
 }
