--- a/scss/pages/_chasseurs.scss
+++ b/scss/pages/_chasseurs.scss
@@ -24,7 +24,7 @@
   height: 500px;
   cursor: pointer;
   transition: all 0.5s ease-in-out;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
   position: relative;
 }
 .card-chasseur:hover {
@@ -34,10 +34,11 @@
 .card-chasseur p {
   position: absolute;
   top: 50px;
-  text-align: center;
-  color: white;
+  text-align: start;
+  color: rgb(190, 175, 175);
   font-size: 1.1rem;
   opacity: 0;
+  padding: 10px;
   transition: all 1s ease-in-out;
 }
 .card-chasseur:hover p {
